# mental-health-rag-chatbot

./: .dockerignore  .gitignore  Dockerfile  LANGFUSE_TRACING_SETUP.md  README.md  TOPIC_AWARE_RETRIEVAL.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
scripts/: clear_index.py  download_docs.py  index_data.py  supabase_schema.sql
src/: __init__.py  main.py
src/api/: dependencies.py  middleware.py  models.py  routes.py
src/core/: __init__.py  config.py  database.py  exceptions.py
src/services/: __init__.py  embedding_service.py  llm_service.py  retrieval_service.py  safety_service.py
src/utils/: logger.py  metrics.py  tracing.py
tests/: conftest.py  test_api.py  test_services.py
